fixed z-index properties on modalBackdrop and modalContentWrapper.

--- a/components/DynamicForm.module.css
+++ b/components/DynamicForm.module.css
@@ -5,6 +5,7 @@
   height: 100vh;
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 50;
 }
 
 .modalContentWrapper {
@@ -15,4 +16,5 @@
   margin: auto;
   inset: 0;
   padding: 50px;
+  z-index: 60;
 }
